Full of implemetation game and player services